added some comments and debug messages

--- a/aufgabe5/Makefile
+++ b/aufgabe5/Makefile
@@ -48,8 +48,11 @@ endif
 
 all: $(TARGET)
 
+run: $(TARGET)
+	@./$(TARGET)
+
 $(TARGET): Makefile $(SOURCES) $(HEADERS) $(OBJECTS)
-	rm -f $@
+	@rm -f $@
 	$(CPP) $(LDFLAGS) $(OBJECTS) -o $@
 
 %.o: %.cpp
