added GNOME's libxml2 as submodule

--- a/aufgabe5/Makefile
+++ b/aufgabe5/Makefile
@@ -3,13 +3,16 @@
 #
 CC := gcc
 CPP := g++
+LD := g++
 GDB = gdb
 RM = rm
 
 #
 # Paths, where compiler and linker can find all the stuff
 #
-LDFLAGS += -L/usr/lib/x86_64-linux-gnu
+LDFLAGS += -L/lib/x86_64-linux-gnu
+#LDFLAGS += -L/usr/lib/x86_64-linux-gnu
+#LDFLAGS += -L/usr/lib/gcc/x86_64-linux-gnu/6
 
 INCLUDE += -I/usr/include
 INCLUDE += -I/usr/local/include
@@ -22,7 +25,7 @@ INCLUDE += -I/usr/include/libxml2
 #  -Wall turns on most, but not all, compiler warnings
 #
 CFLAGS += -g -Wall
-CPPFLAGS += -g -Wall
+CPPFLAGS += -g -Wall -std=c++11
 LDFLAGS += -lstdc++ -lxml2
 
 #
@@ -33,6 +36,17 @@ CPP_SRC = $(wildcard *.cpp)
 OBJS = $(CPP_SRC:.cpp=.o)
 HEADERS = $(wildcard *.h)
 TARGET := ueb05
+
+#
+# libxml2
+#
+LIBXML2_PATH = ../libxml2
+LIBXML2_AC_CONFIG = $(LIBXML2_PATH)/libxml2-config.cmake
+LIBXML2_LIB = $(LIBXML2_PATH)/.libs/libxml2.a
+LIBXML2_SRC = $(filter $(wildcard $(LIBXML2_PATH)/*.c), xmllint.c)
+LIBXML2_OBJS = $(LIBXML2_SRC:.c=.o)
+
+INCLUDE += -I$(LIBXML2_PATH)/include
 
 #
 # Detect operating system
@@ -46,8 +60,8 @@ else
         CPPFLAGS += -D LINUX
 
         # Matthias prefers colorgcc
-        CC := colorgcc
-        CPP := colorgcc
+#        CC := colorgcc
+#        CPP := colorgcc
     endif
     ifeq ($(UNAME_S),Darwin)
         CPPFLAGS += -D OSX
@@ -67,9 +81,18 @@ run: $(TARGET)
 debug: $(TARGET)
 	$(GDB) $^ -ex="r"
 
-$(TARGET): Makefile $(CPP_SRC) $(HEADERS) $(OBJS)
-	@rm -f $@
-	$(CPP) $(LDFLAGS) $(OBJS) -o $@
+$(LIBXML2_PATH)/autogen.sh:
+	$(shell if [ ! -e "$@" ]; then git submodule init; git submodule update; fi)
+
+$(LIBXML2_AC_CONFIG): $(LIBXML2_PATH)/autogen.sh
+	cd $(LIBXML2_PATH) && ./autogen.sh
+
+$(LIBXML2_LIB): $(LIBXML2_AC_CONFIG)
+	cd $(LIBXML2_PATH) && make
+
+$(TARGET): Makefile $(CPP_SRC) $(HEADERS) $(OBJS) $(LIBXML2_LIB)
+	@$(RM) -f $@
+	$(LD) $(LDFLAGS) $(OBJS) $(LIBXML2_OBJS) -o $@
 
 %.o: %.c
 	$(CC) $(CFLAGS) $(INCLUDE) -c $^ -o $@
